--- a/src/components/home/HomeSection.module.scss
+++ b/src/components/home/HomeSection.module.scss
@@ -1,8 +1,5 @@
 @import './../../scss/global.scss';
 .content{
-  min-height: 90vh;
-
-}
 
 .navbarAppear{
   animation: showNavbar 1s forwards;
@@ -10,6 +7,10 @@
 
 .navbarHide{
   animation: hideNavbar 1s forwards;
+
+  @include devices(mobile) {
+    animation: hideNavbarMob 1s forwards;
+  }
 }
 
 @keyframes showNavbar {
@@ -32,4 +33,19 @@ to {
     margin-top: -100%;
     height: 100vh;
   }
+  
 }
+
+@keyframes hideNavbarMob {
+  from {
+    margin-top: 0%;
+    height: 100vh;
+  }
+  to {
+    margin-top: -240%;
+    height: 100vh;
+  }
+  
+}
+}
+
