--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -6,7 +6,7 @@ $color-talent: #FB887B;
 $color-engineering: #61E7CD;
 $color-text: #fff;
 $color-dark-purple: #3C3A77;
-$color-dark-purple: #0b0214;
+// $color-dark-purple: #0b0214;
 // breakpoints
 $mob-start: 374px;
 $palm-start: 420px;
